fix small styling issue in man 5 checkin.

--- a/man/man5/checkin.5
+++ b/man/man5/checkin.5
@@ -4,7 +4,7 @@
 .
 .Sh NAME
 .Nm checkin.cfg
-.Nd checkin configuration file Sy currently concept page
+.Nd checkin configuration file - currently concept page
 .
 .Sh SYNOPSIS
 .Bl -tag
