adjust README/man for changes in start/report.

--- a/man/man1/checkin.1
+++ b/man/man1/checkin.1
@@ -81,10 +81,17 @@ You can also list your worked time in a month by hours for each day.
 . It Sy list
 .  No Invokes list display of the current month. Also takes optional month argument, or
 .  No month/year argument.
+. It Sy report
+.  No Will report the status for the current month
+.  Pq see Fl s No in commandline mode.
+.  No If a Sy start Ns Pf / Sy stop No cycle is running it will report on that as well.
 . It Sy start
 .  No Starts a so-called recording session. The current time will be stored.
 .  No This way you can dynamically allocate the worked time, by just checking in
 .  No at the beginning (and end), of your work. Works in conjunction with Sy stop Ns .
+.  No Issuing the Sy start No command again will provide you with the current
+  state.
+
 . It Sy stop
 .  No Stops a running recording session. The current time will be stored as the end
 .  No of the timeslot. You will be askes for confirmation. Confirmation
